--- a/src/pages/LandingPage2/LandingPage2.css
+++ b/src/pages/LandingPage2/LandingPage2.css
@@ -1,4 +1,5 @@
-body {
+body,
+.landing_page_container {
   overflow-x: hidden;
 }
 
